# iroh-workshop-omniopencon

./: Cargo.toml  README.md
chat/: Cargo.toml
chat-diy/: Cargo.toml
chat-diy/src/: main.rs  util.rs
chat/src/: main.rs  util.rs
chat/version1/: Cargo.toml
chat/version1/src/: util.rs
chat/version2/src/: main.rs
chat/version3/: Cargo.toml
chat/version3/src/: main.rs
chat/version4/: Cargo.toml
chat1/: Cargo.toml
chat1/src/: main.rs
chat2/: Cargo.toml
chat3/: Cargo.toml
chat3/src/: main.rs
chat4/: Cargo.toml
chat4/src/: main.rs
chat_diy/: Cargo.toml
chat_diy/src/: main.rs
iroh-chat-diy/: Cargo.toml
iroh-chat1/: Cargo.toml
iroh-chat1/src/: main.rs
iroh-chat2/: Cargo.toml
iroh-chat2/src/: main.rs  util.rs
iroh-chat3/: Cargo.toml
iroh-chat3/src/: main.rs
pipe/: Cargo.toml
pipe-diy/: Cargo.toml
pipe-diy/src/: main.rs  util.rs
pipe/version1/src/: util.rs
pipe/version2/: Cargo.toml
pipe/version3/: Cargo.toml
pipe/version3/src/: main.rs  util.rs
pipe/version4/: Cargo.toml
pipe1/: Cargo.toml
pipe1/src/: main.rs  util.rs
pipe2/: Cargo.toml
pipe2/src/: main.rs  util.rs
pipe3/: Cargo.toml
pipe3/src/: main.rs
pipe4/: Cargo.toml
pipe4/src/: main.rs
pipe_diy/: Cargo.toml
pipe_diy/src/: main.rs
raw-chat-diy/: Cargo.toml
raw-chat-diy/src/: util.rs
raw-chat1/: Cargo.toml
raw-chat1/src/: main.rs
raw-chat2/: Cargo.toml
raw-chat2/src/: main.rs
raw-chat3/: Cargo.toml
raw-chat3/src/: main.rs
raw-chat4/: Cargo.toml
raw-chat4/src/: main.rs  util.rs
src/: main.rs  util.rs
