[workspace]
resolver = "2"

members = [
    "chat/version1",
    "chat/version2",
    "chat/version3",
    "chat/version4",
    "pipe/version1",
    "pipe/version2",
    "pipe/version3",
    "pipe/version4",
]

[patch.crates-io]
iroh-net = { git = "https://github.com/n0-computer/iroh", rev = "f099dab7742106eb49b36161d8e1b5ff4ed70c42" }
iroh-base = { git = "https://github.com/n0-computer/iroh", rev = "f099dab7742106eb49b36161d8e1b5ff4ed70c42" }
iroh-gossip = { git = "https://github.com/n0-computer/iroh", rev = "f099dab7742106eb49b36161d8e1b5ff4ed70c42" }
