[workspace]
resolver = "2"

members = [
    "chat_diy",
    "chat1",
    "chat2",
    "chat3",
    "chat4",
    "pipe_diy",
    "pipe1",
    "pipe2",
    "pipe3",
    "pipe4",
]

[patch.crates-io]
iroh-net = { git = "https://github.com/n0-computer/iroh", rev = "f099dab7742106eb49b36161d8e1b5ff4ed70c42" }
iroh-base = { git = "https://github.com/n0-computer/iroh", rev = "f099dab7742106eb49b36161d8e1b5ff4ed70c42" }
iroh-gossip = { git = "https://github.com/n0-computer/iroh", rev = "f099dab7742106eb49b36161d8e1b5ff4ed70c42" }
