[package]
name = "pipe_diy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
anyhow = "1"
# command line argument parsing
clap = { version = "4.5.4", features = ["derive"] }
# base types
iroh-base = "0.15"
# iroh networking
iroh-net = "0.15"
# quinn QUIC implementation
quinn = "0.10.2"
# async runtime
tokio = { version = "1.37.0", features = ["full"] }
# logging
tracing = "0.1.40"
# logging to console
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
